<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="ObsoleteLayoutParam,UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/index"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/welcome_to_penit"
            android:textAlignment="center"
           android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="ObsoleteLayoutParam">


        <Button
            android:id="@+id/start_log_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Existing_Account" />

        <Button
            android:id="@+id/start_reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_account" />
    </LinearLayout>


</LinearLayout>